--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 </head>
 <body>
 <div id="content"></div>
-<script src="https://fb.me/react-with-addons-0.13.3.js"></script>
+<script src="https://fb.me/react-0.14.6.js"></script>
+<script src="https://fb.me/react-dom-0.14.6.js"></script>
 <script src="http://fb.me/JSXTransformer-0.12.1.js"></script>
 <script type="text/jsx">
 
@@ -53,7 +54,7 @@ var Menu = React.createClass({
 });
 
 
-React.render(<App />, document.getElementById('content'));
+ReactDOM.render(<App />, document.getElementById('content'));
 
 </script>
 </body>
