--- a/index.html
+++ b/index.html
@@ -10,51 +10,50 @@
 <script src="http://fb.me/JSXTransformer-0.12.1.js"></script>
 <script type="text/jsx">
 
-var App = React.createClass({
-	render: function(){
-		return (
-			<div>
-				Permissionly
-				<Navbar />
-				<MainContent />
-			</div>
-		);
-	}
-});
+	var App = React.createClass({
+		render: function(){
+			return(
+				<div>
+					<Navbar />
+					<MainContent />
+				</div>
+			);
+		}
+	});
 
+	var Navbar = React.createClass({
+		render: function(){
+			return (
+				<p> Home - Features - About - FAQ </p>
+			);
+		}
+	});
 
-var Navbar = React.createClass({
-	render: function(){
-		return (<p style={{textAlign: 'right', fontWeight: 'bold'}}>Home - Features - About - FAQ </p>);
-	}
-});
-
-var MainContent = React.createClass({
-	render: function(){
-		return(
-			<div>
-				Main Content
-				<img src="http://www.npr.org/assets/img/2015/01/12/kimani-maruge-2015-hires_wide-bff66d33bef201f36ce3202e67ca7a03ff28207d.jpeg"
-					style={{width:'100%'}}/>
+	var MainContent = React.createClass({
+		render: function(){
+			return (
+				<div>
+				<img style={{width: '100%'}} src="http://www.npr.org/assets/img/2015/01/12/kimani-maruge-2015-hires_wide-bff66d33bef201f36ce3202e67ca7a03ff28207d.jpeg" />
 				<Menu />
-			</div>
-		);
-	}
-});
-
-var Menu = React.createClass({
-	render: function(){
-		return (
-			<div style={{position: 'absolute', top: '200px', left: '100px'}}>
-				<button>Sign up</button>
-				<button>Trips</button>
-			</div>
-		);
-	}
-});
+				</div>
+			);
+		}
+	});
 
 
-ReactDOM.render(<App />, document.getElementById('content'));
+	var Menu = React.createClass({
+		render: function(){
+			return (
+				<div style={{position: 'absolute', top:'200px', left: '100px'}}>
+					<button>Sign In</button>
+					<button>Dahboard</button>
+				</div>
+			);
+		}
+	});	
+
+	ReactDOM.render(<App />, document.getElementById("content"));
+
 
 </script>
 </body>
